--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
   
     
-  "test-api": "mocha ./api/test --recursive --reporter mochawesome --reporter-options reportDir=reports/mochawesome/ --timeout 180000",
+  "test-api": "mocha ./api/tests --recursive --reporter mochawesome --reporter-options reportDir=reports/mochawesome/ --timeout 180000",
   
     
   "reports": "open 'reports/mochawesome/mochawesome.html"
